Fix overlapping movies

--- a/src/Movies/Movies.css
+++ b/src/Movies/Movies.css
@@ -2,7 +2,7 @@
   padding: 20px;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-gap: 10px;
+  grid-gap: 25px;
 }
 
 .movie-card-link {
